packages/example/content/boomerang-cicd/7.1.0/introduction/02.getting-started.md
---
title: Getting Started
index: 2
---

# Getting Started

Boomerang CICD components are created from git repositories. The following steps will let you create a new component from a repository.

1. Navigate to [Boomerang CICD Components](https://launch.boomerangplatform.net/cicd/apps/components)
2. Select the appropriate team from the teams drop down in the top left
3. Select 'Create Component' to launch the self service on boarding wizard.
4. At the start of the wizard, you will be asked to 'Select your source repository'. _See Source Code Usage Scenarios below._
5. Upon selecting a source repository for the first time, you may be promoted to 'sign in' (authenticate) and approve Boomerang CICD integration with your chosen repository. Select the affirmative option and you will be redirected back to the wizard. [Why do we need access?](/boomerang-cicd/introduction/frequently-asked-questions)
6. A list of your repos will be shown in the format of `owner / name`. Selct the repository you would like to add and select the 'Validate' and then 'Next Step' to continue. You can also personalize the component with a unique name. _Pro Tip: Use the search to narrow the results_ [Don't see any repos?](/boomerang-cicd/introduction/frequently-asked-questions)
7. You will be presented with the supported modes. Select the mode that matches the the use case and fill in any default component properties that appear. See [Modes and Properties](/boomerang-cicd/how-to-guide/modes-and-properties)
8. You can then choose to let Boomerang CICD create a deploy key against your repository or in some cases you may want to supply a specific key, such as with iOS apps that have Cocoapod dependencies, these need to use the same key.
9. Following on you can configure the default trigger for the component. This tells Boomerang CICD when to trigger and what pipeline to target.
10. Lastly you can create the webhook against your repository and complete the on-boarding.
11. Upon successful creation, you will receive a confirmation message and can navigate back to your teams component list! [Get an error message?](/boomerang-cicd/introduction/frequently-asked-questions)

## Modes and Quotas

When you first request your Boomerang CICD Catalog Service, it is by default created with only Cloud Native modes and the ability to create one (1) component. For additional modes and component quotas please speak to your support representative.

If you choose specific modes such as Node.js or Java, they come with pre-integrated, pre-validated, and supported workflows to execute tasks. The following diagram shows an example of using the Node.js mode and the workflow you get out of the box.

![Node.js Pre-Integrated Mode](./img/pre-integrated-execution.png)

## Prerequisites

- If using a repository in `Boomerang-Delivery` and you have GitHub Team created for your project make sure you add the repository to your team so all members of your team can access. Direct user permissions on the repository in this case is not permitted nor required.
- Added a `.boomerang.properties` file and other required files in the `_boomerang` folder as mentioned in [Modes and Properties](/boomerang-cicd/how-to-guide/modes-and-properties)

## Source Code Repository Support

| Repository            | Integration |
| --------------------- | ----------- |
| IBM Mobile GitLab     | Full        |
| IBM GitHub Enterprise | Full        |
| GitHub.com            | Full        |
| IBM Cloud Git         | Partial     |

### Full Auth Integration

Utilizes a users personal access token to configure a deploy key and webhooks.

### Partial Auth Integration

A private source repository in either an approved organization such as `boomerang` or `boomerang-delivery` (there's a tile on your launchpad), or a personal repository with `boomrng@us.ibm.com` added as a user with write access or above.

## Source Code Repository Usage

Currently we support IBM GitHub Enterprise, IBM Cloud Git, IBM Mobile GitLab, and GitHub.com out of the box. There are certain usage scenarios to be aware of when using these git repositories.

| Repository            | Client IP | IBM IP | IBM Asset | IBM internal | PoC / Demo | OpenSource |
| --------------------- | --------- | ------ | --------- | ------------ | ---------- | ---------- |
| IBM Mobile GitLab     | x         | x      | x         | x            | x          |            |
| IBM Cloud Git         | x         |        |           |              | x          |            |
| IBM GitHub Enterprise |           | x      | x         | x            | x          |            |
| GitHub.com            |           |        |           |              |            | x          |

Also of note for custom repository locations, [Is your repository hosted somewhere else?](/boomerang-cicd/introduction/frequently-asked-questions/)
